--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Header */
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    margin: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(47, 101, 148);
+}
+
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+    width: 200px;
+    
+    list-style: none;
+}
+
+ul li a {
+    text-decoration: none;
+    color: rgb(78, 141, 197);
+}
