--- a/src/app/pages/contacts-page/contacts-page.component.css
+++ b/src/app/pages/contacts-page/contacts-page.component.css
@@ -1,6 +1,3 @@
-h2 {
-    text-align: center;
-}
 
 .contacts {
     width: 100%;
@@ -13,13 +10,29 @@ h2 {
 
 .contacts li {
     list-style: none;
-    width: 85%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 20px auto;
-    border: 1px rgb(94, 164, 211) solid;
-    border-radius: 10px;
-    background-color: rgba(163, 180, 212, 0.473);
+    margin: 0 auto;
+    padding: 15px;
+    border-top: solid 1px #383a56;
+    background-color: rgba(100, 116, 146, 0.473);
+}
+
+.user-img {
+    margin: 0 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    width: 50px;
+}
+
+.user-preview-details {
+    display: flex;
+    flex-direction: column;
+    height: 50px;
+}
+.user-preview-details h3{
+    margin: auto;
 }
 
 .contacts li div {
@@ -34,8 +47,29 @@ h2 {
     width: 30px;
     font-size: 1.5rem;
     border-radius: 10px;
-    border: 1px solid rgba(151, 151, 221, 0.781);
+    border: none;
     margin: auto 20px;
     cursor: poiner;
     outline: none;
+}
+
+.addContact {
+    padding: 0.5rem 1rem;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 10;
+    bottom: 20px;
+    right: 20px;
+    background-color: #383a56;
+    border: solid 2px #b0a565;
+    font-size: 2.5rem;
+    color: #ede68a;
+}
+
+.search-contact {
+    width: 100%;
+    padding: 15px;
+    background-color: #333333;
+    border: none;
+    border-bottom: solid 2px rgb(155, 153, 161);
 }
