--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,18 @@
 
 <section class="home">
-    <h2>Welcome {{user.name}}</h2>
-    <div class="currAmount">
-        <img src="https://img.icons8.com/cotton/64/000000/money-bag-bitcoin.png"/>
-        <p>Coins: {{user.BTC}} </p>
+ 
+    <h2 class="user-greeting">Hi, {{user.name}}</h2>
+    <div class="user-data">
+        <div class="currAmount">
+            <h2>BIT:</h2>
+            <p style="color: #b0a565">B {{user.BTC}} </p>
+        </div>
+        <div class="currBTC">
+            <h2>USD VALUE:</h2>
+            <p><span style="color: rgb(86, 241, 86)">$ {{currBtc}} </span></p>
+        </div>
     </div>
-    <div class="currBTC">
-        <img src="https://img.icons8.com/cotton/64/000000/bitcoin--v1.png"/>
-        <p>BTC: 0.000100 </p>
-    </div>
+   
 </section>
 
+<app-move-list></app-move-list>
