--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
       <a href="#" class="logo">Mr.BitCoin</a>
       <nav>
         <ul>
-          <li routerLink="/"><img src="../assets/icons/home.png" /></li>
-          <li routerLink="/contacts"><img src="../assets/icons/team.png" /></li>
-          <li routerLink="/charts"><img src="../assets/icons/graph.png" /></li>
+          <li routerLink="/"><img src="./assets/icons/home.png" /></li>
+          <li routerLink="/contacts"><img src="./assets/icons/team.png" /></li>
+          <li routerLink="/charts"><img src="./assets/icons/graph.png" /></li>
         </ul>
       </nav>
     </div>
