--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
     </div>
   </header>
 
-  <div class="background">
-  </div>
+  <div class="background"></div>
+
   <div class="main-content">
     <router-outlet></router-outlet>
   </div>
