--- a/src/app/pages/charts-page/charts-page.component.html
+++ b/src/app/pages/charts-page/charts-page.component.html
@@ -1,19 +1,19 @@
 
 <google-chart #chart
+   class="chart"
    [title]="tradeVolume.title"
    [type]="tradeVolume.type"
    [data]="tradeVolume.data"
    [columns]="tradeVolume.columnNames"
-   [width]="550"
-   [height]="400">
+   [options]="options">
 </google-chart>
 
 
 <google-chart #chart
+   class="chart"
    [title]="marketPrice.title"
    [type]="marketPrice.type"
    [data]="marketPrice.data"
    [columns]="marketPrice.columnNames"
-   [width]="550"
-   [height]="400">
+   [options]="options">
 </google-chart>
